DevOCL/src/objects/CLQ_Inspection_Tools__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Applicable_To__c</fullName>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Alleged Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Home Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of State Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Age Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC - Type A Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC - Type B Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type A Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B Home</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Inspection Tools object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Inspection Tools</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Applicable_To__c</columns>
        <columns>CLQ_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inspection Tools Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>